k8s-playground/paperless/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  labels:
    app: paperless-ngx
    environment: playground
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
