k8s-playground/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  namespace: paperless
  labels:
    app: paperless-ngx
spec:
  type: ClusterIP
  selector:
    app: paperless-ngx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
